...
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="phone">Phone</string>
    <string name="unknown_error">Something went wrong. Please try again later.</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_telephone">tel:</string>
    <string name="text_regular_car_label">Regular</string>
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
...
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>
...
    <string name="tip">Tip</string>
    <string name="rider_cancel_fee">Rider Cancellation Fee</string>
    <string name="send_report">Report defect</string>
    <string name="text_cancel_ride_confirmation">Are you sure you want to cancel ?</string>

    <string name="dynamic_queue_name">%1$s Queue</string>
    <string name="queue_in_number_info">Numbers represent your current spot\n in queue</string>
    <string name="queue_out_number_info">Numbers represent amount of drivers in the %s queue</string>
    <string name="queue_leaving_area_desc"> You have left the queue zone and have been removed from the queue</string>
    <string name="queue_leaving_inactive_desc">You have been removed from the queue because you were offline</string>
    <string name="queue_leaving_penalty_desc">You have been removed from the queue due to consequently missed requests</string>
    <string name="queue_zone">%1$s Zone</string>
    <string name="queue_zone_desc_greetings">Welcome to the %1$s Zone.\u0020</string>
    <string name="queue_zone_desc_you">Your locations in the queue:\n</string>
    <string name="queue_zone_desc_next">%1$s - NEXT</string>
    <string name="queue_zone_desc_number">%2$s - %1$d</string>
    <string name="queue_zone_update">Your location updated.</string>
    <string name="first_in_queue_text">NEXT</string>
    <plurals name="queue_zone_position">
        <item quantity="one">You are NEXT in the queue.</item>
        <item quantity="other">Minimum queue position: %d</item>
    </plurals>
    <string name="missing_navigation_application_dialog_title">Missing navigation application</string>
    <string name="missing_navigation_application_dialog_msg">In order to navigate, please install a navigation app from play store</string>
...
