<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <LinearLayout
...
                    <RelativeLayout
                        android:layout_width="120dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/toolbarActionButton"
                            style="@style/Toolbar.ActionButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_toolbar_action_fatal"
                            tools:background="@drawable/bg_toolbar_action_warn"
                            tools:ignore="RtlSymmetry"
...

            </FrameLayout>

        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/black_80_opaq"
            android:fitsSystemWindows="false"
            app:itemBackground="@color/navigation_item"
...
